[tool.black]
line-length = 120

[tool.poetry]
name = "cdown"
version = "0.1.0"
description = "Tools for CODEOWNERS files"
authors = ["W Augusto Andreoli <andreoliwa@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/andreoliwa/python-cdown"
classifiers=[
    # complete classifier list: http://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Utilities",
]
keywords=[
    # eg: 'keyword1', 'keyword2', 'keyword3',
]

[tool.poetry.urls]
"Documentation" = "https://python-cdown.readthedocs.io/"
"Changelog" = "https://python-cdown.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/andreoliwa/python-cdown/issues"

[tool.poetry.scripts]
cdown = "cdown.cli:code_owners_cli"

[tool.poetry.dependencies]
python = "^3.7"
click = "*"
sphinx = { version = ">=1.3", optional = true }
sphinx-rtd-theme = { version = "*", optional = true }
gitignore_parser = "*"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.poetry.dev-dependencies]
pytest = "*"
ipdb = "*"
jedi = "<0.18.0" # TODO: remove when this is fixed https://github.com/ipython/ipython/issues/12745

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"

# https://commitizen-tools.github.io/commitizen/bump/
tag_format = "v$version"
version_files = [
    "docs/conf.py:version",
    "pyproject.toml:version",
    "README.rst",
    "src/cdown/__init__.py"
]
update_changelog_on_bump = true

# https://commitizen-tools.github.io/commitizen/changelog/#incremental
changelog_incremental = true
